--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.3",
     "@smastrom/react-rating": "^1.5.0",
     "axios": "^1.6.8",
