--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.3",
     "@smastrom/react-rating": "^1.5.0",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
     "axios": "^1.6.8",
     "firebase": "^10.11.0",
     "react": "^18.2.0",
