--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-parallax": "^3.5.1",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "recharts": "^2.12.7",
     "sweetalert2": "^11.10.8",
     "swiper": "^11.1.1"
   },
