--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stripe/stripe-js": "^3.4.1",
     "axios": "^1.6.8",
     "firebase": "^10.11.0",
+    "is-weakmap": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.4",
